add: tks st-end d frm stks st d + est d,h
